<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="message_error">Ups! :/ seems like something wrong just happened</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_zip_code">Zip code</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="edit_contact_modal_edit">Edit</string>
    <string name="edit_contact_modal_delete">Delete</string>
    <string name="edit_contact_hint_birthday">Birthday</string>
    <string name="add_contact_error_msg">Please add the contact name</string>
    <string name="add_contact_activity_title">Add new contact</string>
    <string name="edit_contact_activity_title">Edit contact</string>
    <string name="action_discard">Discard</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="details_activity_title">Contact details</string>
    <string name="action_edit">Edit</string>
</resources>
